// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Loader slice tests should update state on fulfilled action by chain id 1`] = `
Object {
  "byChainId": Object {
    "test": Object {
      "boostAllowance": Object {
        "error": null,
        "status": "init",
      },
      "boostBalance": Object {
        "error": null,
        "status": "pending",
      },
      "boostContractData": Object {
        "error": null,
        "status": "init",
      },
      "govVaultAllowance": Object {
        "error": null,
        "status": "init",
      },
      "govVaultBalance": Object {
        "error": null,
        "status": "init",
      },
      "govVaultContractData": Object {
        "error": null,
        "status": "init",
      },
      "standardVaultAllowance": Object {
        "error": null,
        "status": "init",
      },
      "standardVaultContractData": Object {
        "error": null,
        "status": "init",
      },
      "tokenBalance": Object {
        "error": null,
        "status": "init",
      },
    },
  },
  "global": Object {
    "apy": Object {
      "error": null,
      "status": "init",
    },
    "boosts": Object {
      "error": null,
      "status": "init",
    },
    "chainConfig": Object {
      "error": null,
      "status": "init",
    },
    "lpPrices": Object {
      "error": null,
      "status": "init",
    },
    "prices": Object {
      "error": null,
      "status": "init",
    },
    "vaults": Object {
      "error": null,
      "status": "init",
    },
  },
}
`;

exports[`Data Loader slice tests should update state on fulfilled action by chain id 2`] = `
Object {
  "byChainId": Object {
    "test": Object {
      "boostAllowance": Object {
        "error": null,
        "status": "init",
      },
      "boostBalance": Object {
        "error": null,
        "status": "fulfilled",
      },
      "boostContractData": Object {
        "error": null,
        "status": "init",
      },
      "govVaultAllowance": Object {
        "error": null,
        "status": "init",
      },
      "govVaultBalance": Object {
        "error": null,
        "status": "init",
      },
      "govVaultContractData": Object {
        "error": null,
        "status": "init",
      },
      "standardVaultAllowance": Object {
        "error": null,
        "status": "init",
      },
      "standardVaultContractData": Object {
        "error": null,
        "status": "init",
      },
      "tokenBalance": Object {
        "error": null,
        "status": "init",
      },
    },
  },
  "global": Object {
    "apy": Object {
      "error": null,
      "status": "init",
    },
    "boosts": Object {
      "error": null,
      "status": "init",
    },
    "chainConfig": Object {
      "error": null,
      "status": "init",
    },
    "lpPrices": Object {
      "error": null,
      "status": "init",
    },
    "prices": Object {
      "error": null,
      "status": "init",
    },
    "vaults": Object {
      "error": null,
      "status": "init",
    },
  },
}
`;

exports[`Data Loader slice tests should update state on fulfilled action by chain id 3`] = `
Object {
  "byChainId": Object {
    "test": Object {
      "boostAllowance": Object {
        "error": null,
        "status": "init",
      },
      "boostBalance": Object {
        "error": "fatality",
        "status": "rejected",
      },
      "boostContractData": Object {
        "error": null,
        "status": "init",
      },
      "govVaultAllowance": Object {
        "error": null,
        "status": "init",
      },
      "govVaultBalance": Object {
        "error": null,
        "status": "init",
      },
      "govVaultContractData": Object {
        "error": null,
        "status": "init",
      },
      "standardVaultAllowance": Object {
        "error": null,
        "status": "init",
      },
      "standardVaultContractData": Object {
        "error": null,
        "status": "init",
      },
      "tokenBalance": Object {
        "error": null,
        "status": "init",
      },
    },
  },
  "global": Object {
    "apy": Object {
      "error": null,
      "status": "init",
    },
    "boosts": Object {
      "error": null,
      "status": "init",
    },
    "chainConfig": Object {
      "error": null,
      "status": "init",
    },
    "lpPrices": Object {
      "error": null,
      "status": "init",
    },
    "prices": Object {
      "error": null,
      "status": "init",
    },
    "vaults": Object {
      "error": null,
      "status": "init",
    },
  },
}
`;

exports[`Data Loader slice tests should update state on fulfilled global action 1`] = `
Object {
  "byChainId": Object {},
  "global": Object {
    "apy": Object {
      "error": null,
      "status": "init",
    },
    "boosts": Object {
      "error": null,
      "status": "init",
    },
    "chainConfig": Object {
      "error": null,
      "status": "init",
    },
    "lpPrices": Object {
      "error": null,
      "status": "init",
    },
    "prices": Object {
      "error": null,
      "status": "pending",
    },
    "vaults": Object {
      "error": null,
      "status": "init",
    },
  },
}
`;

exports[`Data Loader slice tests should update state on fulfilled global action 2`] = `
Object {
  "byChainId": Object {},
  "global": Object {
    "apy": Object {
      "error": null,
      "status": "init",
    },
    "boosts": Object {
      "error": null,
      "status": "init",
    },
    "chainConfig": Object {
      "error": null,
      "status": "init",
    },
    "lpPrices": Object {
      "error": null,
      "status": "init",
    },
    "prices": Object {
      "error": null,
      "status": "fulfilled",
    },
    "vaults": Object {
      "error": null,
      "status": "init",
    },
  },
}
`;

exports[`Data Loader slice tests should update state on fulfilled global action 3`] = `
Object {
  "byChainId": Object {},
  "global": Object {
    "apy": Object {
      "error": null,
      "status": "init",
    },
    "boosts": Object {
      "error": null,
      "status": "init",
    },
    "chainConfig": Object {
      "error": null,
      "status": "init",
    },
    "lpPrices": Object {
      "error": null,
      "status": "init",
    },
    "prices": Object {
      "error": "fatality",
      "status": "rejected",
    },
    "vaults": Object {
      "error": null,
      "status": "init",
    },
  },
}
`;
